# implementation-review-loop

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agent-loop/: checks.json  config.json
.codex/: coding-rules.md
skills/implementation-review-loop/: SKILL.md  pyproject.toml
skills/implementation-review-loop/src/agent_loop/assets/prompts/: plan-reviewer.md
skills/implementation-review-loop/src/agent_loop/assets/schemas/: code-review-output.schema.json  implementer-output.schema.json  plan-review-output.schema.json
skills/implementation-review-loop/src/agent_loop/assets/templates/config/: checks.json  compat-loop.json  delegated.json
skills/implementation-review-loop/src/agent_loop/assets/templates/plans/: implementation-plan.md  plan-review.md
skills/implementation-review-loop/src/agent_loop/assets/templates/prompts/: code-reviewer.md  implementer.md
skills/implementation-review-loop/src/agent_loop/cli/: agent_commands.py  assets.py  code_review_cmd.py  doctor_cmd.py  formatting.py  init_cmd.py  main.py  new_plan_cmd.py  plan_review_cmd.py  run_loop_cmd.py  workflow_agent.py
skills/implementation-review-loop/src/agent_loop/core/: checks.py  contracts.py  doctor.py  nested_workflow_guard.py  process.py  repo_config.py
skills/implementation-review-loop/src/agent_loop/core/providers/: __init__.py  claude.py  codex.py  gemini.py  structured_prompt.py
skills/implementation-review-loop/src/agent_loop/core/run_loop/: __init__.py  findings.py  io.py  loop.py  state.py  summary.py
tests/: test_agent_commands.py  test_checks.py  test_claude.py  (+12 more)
(+38 files in other folders)
